; ModuleID = '/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_data_item_get_double.c'
source_filename = "/home/carl/AnghaBench/obs-studio/libobs/extr_obs-data.c_data_item_get_double.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OBS_DATA_NUMBER = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (double (i32*, i32)* @data_item_get_double to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @data_item_get_double(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32*, i32** %3, align 8
  %6 = load i32, i32* @OBS_DATA_NUMBER, align 4
  %7 = call i64 @item_valid(i32* %5, i32 %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %11

9:                                                ; preds = %2
  %10 = load i32*, i32** %3, align 8
  br label %12

11:                                               ; preds = %2
  br label %12

12:                                               ; preds = %11, %9
  %13 = phi i32* [ %10, %9 ], [ null, %11 ]
  %14 = load i32, i32* %4, align 4
  %15 = call double @item_double(i32* %13, i32 %14)
  ret double %15
}

declare dso_local double @item_double(i32*, i32) #1

declare dso_local i64 @item_valid(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
